# VoxelGame

./: CMakeLists.txt
.cache/clangd/index/: IWindow.cpp.155EBC0AE0BD1B8F.idx  IWindow.h.3D0FDC323AF0DD6D.idx  Window.cpp.3EFCABBD3C86F4DF.idx  Window.h.B751A0B55EBD8BC5.idx  main.cpp.5E8213F13460E474.idx
src/: Game.h  Window.cpp  Window.h  main.cpp
